--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,22 @@
 --SLATE: #434455;
 }
 /* GENERAL STYLING */
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: content-box;
+}
+
+
+
 .container {
    width: 1440px;
+   margin: auto;
 }
 body {
    font-family: "Roboto", sans-serif;
 }
-.list {
+/* .list {
    display: inline-flex;
    gap: 40px;
    color: var(--NAVY-BLUE);
@@ -20,8 +29,8 @@ body {
    letter-spacing: 0.32px;
    font-size: 16px;
    line-height: 24px;
-   text-decoration: none;
-}
+   text-decoration: none; */
+/* } */
 h2 {
    text-align: center;
    font-size: 36px;
@@ -94,7 +103,7 @@ h1 {
    padding-top: 120px;
    padding-bottom: 120px;
    background-color: var(--NAVY-BLUE);
-   height: 600px;
+   /* height: 600px; */
    text-align: center;
 }
 .hero-text {
@@ -118,85 +127,26 @@ button:hover {
 /* END OF HERO SECTION STYLING*/
 
 /* BENEFITS SECTION STYLING */
-.benefits {
+/* .benefits {
    margin: 100px 0;
    color: var(--SLATE);
-}
+} */
 .benefits ul {
    display: flex;
-   list-style: none;
-   justify-content: center;
-   gap: 50px;
-}
-/* ABOUT SECTION STYLING */
-.about {
-   margin: 100px 0;
-} 
-.about ul {
-   display: flex;
-   justify-content: center;
-   gap: 40px;
-}
-.about ul li {
-   padding-top: 40px;
-   display: inline-block;  
-}
-/* END OF ABOUT SECTION STYLING */
-
-/* OUR TEAM SECTION STYLING */
-.card {
-   box-sizing: border-box;
-   background-color: var(--CLOUD);
-   height: 732px;
-   flex-shrink: 0;
-   justify-content: center;
-   padding-top: 120px;
-}
-.card ul {
-   display: flex;
-   justify-content: center;
    gap: 24px;
+   /* justify-content: center; */
+   list-style-type: none;
 }
-.card ul li {
-   margin-top: 72px;
-   border-radius: 0px 0px 4px 4px;
-   background: var(--WHITE, #FFF);
-   text-align: center;
-   font-size: 20px;
-   font-weight: 500;
-}
-/* END OF OUR TEAM SECTION STYLING */
 
-/* FOOTER SECTION STYLING */
-.footer-background {
-   background-color: var(--NAVY-BLUE);
-   height: 312px;
-   margin-bottom: 10px;
+.benefits-item {
+   width: 264px;
 }
-.footer-logo {
-      display: inline-block;
-      font-family: raleway;
-      margin: 100px 0 0 156px;
-      height: 24px;
-      justify-content: center;
+
+.benefit-icon {
+   width: 40px;
+   height: 40px ;
 }
-.footer-logo:hover {
-   color: var(--IRIS);
-}
-.logo2 {
-   height: 24px;
-   color: var(--IRIS);   
-}
-.footer-logo-studio {
-   color: var(--CLOUD)
-}
-.footer-text {
-   color: var(--CLOUD);
-   margin-left: 156px;
-   margin-top: 20px;
-   font-size: 16px;
-   font-weight: 400;
-   line-height: 24px;
-   letter-spacing: 0.32px;
-}
-/* END OF FOOTER SECTION STYLING */
+
+
+
+
